Feat: update CreatorStringBuilder.java according to the review